Thu May 19 15:36:41 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportHeader.h:
        * dds/DCPS/transport/framework/TransportHeader.inl:
        * dds/DCPS/transport/framework/TransportHeader.cpp:

          Further clean-up from the merge: fix for GCC 3.3.x.

Thu May 19 14:46:17 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/packet.cpp:

          Fix for dissecting TCP frames that contain multiple DCPS messages.
          Also works for DCPS messages that span TCP frames.

Thu May 19 14:31:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/Definitions.h:
        * dds/DCPS/RTPS/BaseMessageUtils.h:
        * dds/DCPS/RTPS/RtpsMessageTypes.idl:
        * dds/DCPS/RTPS/md5.cpp:
        * dds/DCPS/transport/framework/TransportReassembly.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.h:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/marshal_generator.cpp:
        * tests/DCPS/KeyTest/md5_test.cpp:
        * tests/DCPS/KeyTest/run_test.pl:
        * tests/transport/dds_comparative/SubReader.cpp:
        * tests/transport/simple_bp_rm/SimpleDataReader.cpp:

          Clean up from yesterday's merge.  Fuzz and portability problems.

Thu May 19 14:23:50 UTC 2011  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/Definitions.h:

          Change literal to explicitly be a 64 bit value.

Wed May 18 21:32:29 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch "RTPS", which includes the start of the DDS
          Interoperability specification (OMG formal/2010-11-01).  This
          is not yet a complete implementation, but it contains changes
          that impact the existing OpenDDS transport protocol, including
          64-bit sequence numbers, support for fragmentation and
          reassembly in UDP-based transports, and the ability to marshal